--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-table": "^8.21.3",
     "bcryptjs": "^3.0.2",
@@ -38,6 +40,7 @@
     "react-hook-form": "^7.65.0",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.181.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
